--- a/styles/home.scss
+++ b/styles/home.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .chatbar {
-  background: tomato;
+  background: #36454f ;
   border-top: 1px solid black;
   bottom: 0;
   display: flex;
@@ -62,8 +62,9 @@ body {
 }
 
 .navbar {
-  background: tomato;
+  background: #36454f ;
   border-bottom: 1px solid black;
+  color: white;
   height: 60px;
   left: 0;
   padding: 0 10px;
@@ -88,3 +89,5 @@ body {
   float: right;
   margin: 20px
 }
+
+// get flexbox
